# BMSTU_4_semester

./: .gitignore  README.md
.github/workflows/: 1.yml
ASM/lab_07/: .gitignore  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  file  lab_07  main.c  string_functions.c  string_functions.h  strncpy.s
ASM/lab_08/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  main.cpp  research.py  results.txt  test_functions.h
ASM/lab_08_2/: main.cpp
ASM/lab_09/: .gdb_history  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  functions.cpp  functions.h  main.cpp  research.py  results.txt
ASM/lab_10/: combo.asm  combo.lst  test.s  test_1.asm
ASM/lab_11/Project1/: Project1.sln  main.asm  test1.asm
ASM/lab_11/Project1/Project1/: Project1.vcxproj
ASM/lab_11/Project1/Project1/x64/Debug/: Project1.exe.recipe
ASM/lab_11/Project1/Project1/x64/Debug/Project1.tlog/: Project1.lastbuildstate
CA/: .gitignore
CA/lab_01/: README.md  data_1.csv  data_1.ods  hermite_example.ods
CA/lab_01/matrix_ls/inc/: consts.h  matrix.h
CA/lab_01/matrix_ls/src/: matrix.c
CA/lab_01/matrix_ls/unit_tests/: check_matrix.c  unit_tests.h
CA/lab_01/python_version/: .~lock.data_1.csv#  .~lock.data_1t.csv#  .~lock.data_2t.csv#  Untitled.ipynb  data_1.csv  data_1t.csv  data_2.csv  data_2t.csv  main.py
CA/lab_01/src/: Makefile  start.sh  unit_testing.sh
CA/lab_01/src/lib/inc/: errors.h  hermite_polynomial.h  input_data.h  libapproximation.h  list.h  newton_polynomial.h
CA/lab_01/src/lib/src/: hermite_polynomial.c  input_data.c  list.c  newton_polynomial.c
CA/lab_01/src/lib/unit_tests/: check_main.c  check_newton_polynomial.c  unit_tests.h
CA/lab_02/: NewtonInterpolation.py  SplineInterpolation.py  main.py  tests.py
CA/lab_02/data/: data_1.csv  data_3.csv
CA/lab_03/: NewtonInterpolation.py  SplineInterpolation.py  data_2.txt  main.py
CA/lab_05/: .gitignore  main.py
CA/lab_12_1_2/: Makefile  unit_testing.sh
CA/lab_12_1_2/app/: IntArray.py  main.py
CA/lab_12_1_2/lib/inc/: libarray.h  queue.h
CA/lab_12_1_2/lib/src/: libarray.c  queue.c
CA/lab_12_1_2/lib/unit_tests/: check_array_get_squares.c  check_array_left_move.c  check_main.c  unit_tests.h
CG/: README.md
CG/lab_01/: ResultWindow.py  config.py  index.html  main.py  styles.css
CG/lab_02/: ControlField.py  Figure.py  PaintField.py  README.md  config.py  main.py
CG/lab_04/: AlgorithmFunctions.py  Analyzer.py  ControlField.py  InputWidget.py  MainWindow.py  PaintField.py  SpaceAndCountSelection.py  TimePlot.py  config.py
CG/lab_05/: AlgorithmFunctions.py  AlgorithmSelectionField.py  ColorSelectionField.py  ControlField.py  MainWindow.py  PaintField.py  README.md  main.py
CG/lab_06/: AlgorithmFunctions.py  InputTwoParams.py  MainWindow.py  OneInputField.py  PaintField.py  TimePlot.py  config.py  main.py  readme.md
CG/lab_07/: AlgorithmFunctions.py  Analyzer.py  ControlField.py  MainWindow.py  PaintField.py  config.py  main.py
CG/lab_08/: AlgorithmFunctions.py  ColorSelectionField.py  ControlField.py  PaintField.py  README.md
CG/lab_09/: AlgorithmFunctions.py  ControlField.py  MainWindow.py  PaintField.py  StepsPlot.py  TabWidget.py  config.py  main.py
CG/lab_10/: functions.py  lab_10.py  lab_10.ui  lab_10_ui.py  main.py  screen_image.py
OOP/: .gdb_history  peda-session-lab_02.txt
OOP/lab_01/: README.md
OOP/lab_01/lab_01/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  coefficients.cpp  coefficients.h  edge.cpp  edge.h  error.cpp  error.h  errormessagedialoge.cpp  errormessagedialoge.h  figure.cpp  figure.h  figureconfiguration.cpp  figureconfiguration.h  figureconfiguration_2.cpp  figureconfiguration_2.h  filebasemanipulations.cpp  filebasemanipulations.h  fileio.cpp  fileio.h  graphicscene.cpp  graphicscene.h  graphicview.cpp  graphicview.h  graphicviewstruct.cpp  graphicviewstruct.h  handler.cpp  handler.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  memoryallocate.cpp  memoryallocate.h  objectsizeparams.cpp  objectsizeparams.h  point.cpp  point.h  request.cpp  request.h  (+4 more)
OOP/lab_01/lab_01/data/: data_2.txt  data_3.txt
OOP/lab_02/: CMakeCache.txt  CMakeLists.txt  README.md  concepts.h  const_iterator.h  const_iterator.hpp  exceptionmatrix.h  iterator.h  iterator.hpp  main.cpp  matrix.h  matrix.hpp  matrixbase.h  matrixrow.h  matrixrow.hpp  range.cpp  range.h  rename.sh  testmatrix.cpp  testmatrix.h  testmatrixrow.h  testmatrixrow.hpp
OOP/lab_03/: .$lab_03.drawio.bkp  lab_03.drawio  mainwindow.ui  Диаграмма без названия.drawio
OOP/lab_03/untitled/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
OOP/lab_03/untitled/exceptions/: exception.h
OOP/lab_03/untitled/objects/: composite.h  object.h
OOP/lab_03/untitled/objects/invisibleobjects/: invisibleobject.cpp  invisibleobject.h
OOP/lab_03/untitled/objects/visibleobjects/: basemodel.h  visibleobject.h
OOP/lab_03/untitled/objects/visibleobjects/model/: model.h
OOP/lab_03/untitled/objects/visibleobjects/model/modeldata/: modeldata.cpp  modeldata.h
OOP/lab_03/untitled/objects/visibleobjects/model/modeldata/edge/: edge.cpp  edge.h
OOP/lab_03/untitled/objects/visibleobjects/model/modeldata/point/: point.cpp  point.h
OOP/lab_03/untitled/unittesting/: testedge.cpp  testedge.h  testmodeldata.cpp  testmodeldata.h  testpoint.cpp  testpoint.h  unittesting.cpp
OOP/lab_04/: .$lab4.drawio.bkp  lab4.drawio
OOP/lab_04/untitled/: CMakeLists.txt  button.cpp  button.h  cabin.cpp  cabin.h  controller.cpp  controller.h  defines.h  door.cpp  door.h  elevator.cpp  elevator.h  exceptions.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openbutton.cpp  openbutton.h  selectbutton.cpp  selectbutton.h
OOP/lab_05/: .$lab_05.drawio.bkp  .$lab_05.drawio.dtmp  lab_05.drawio
OOP/lab_08_2/: CMakeLists.txt  main.cpp
docs/: 1_1.md  1_10.md  1_11.md  1_12.md  1_13.md  1_14.md  1_15.md  1_16.md  1_17.md  1_2.md  1_3.md  1_4.md  1_5.md  1_6.md  1_7.md  1_8.md  1_9.md  2_1.md  2_2.md  2_3.md  Home.md
